# fabric-client

./: .gitignore  README.md  pyproject.toml
.github/instructions/: code-review.instructions.md
examples/: iteration.ipynb
fabric_client/: __init__.py  client.py  constants.py  container.py  exceptions.py  session.py
fabric_client/apis/: __init__.py  dataflow.py  scoped.py
fabric_client/apis/fabric/: __init__.py  items.py  workspaces.py
fabric_client/apis/powerbi/: __init__.py  dataflows.py  datasets.py  reports.py
fabric_client/auth/: __init__.py  credentials.py  msal.py  token.py
fabric_client/core/: __init__.py  cache.py  collection.py  endpoint.py  http.py  http_aiohttp.py  http_httpx.py  http_session.py  paginator.py  resource.py
fabric_client/logging/: __init__.py  factory.py  formatter.py
fabric_client/models/: __init__.py  dataflow.py  dataset.py  report.py  scan.py  semantic_model.py  workspace.py
fabric_client/services/: __init__.py  power_query.py  scan.py
fabric_client/utils/: __init__.py  helpers.py  serializer.py
tests/: __init__.py  conftest.py
