[project]
name = "fabric-client"
version = "0.1.0"
description = "Async Python client for Microsoft Fabric and Power BI REST APIs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.15"
dependencies = [
    "aiohttp>=3.14.1",
    "httpx>=0.28.1",
    "msal>=1.30.0",
    "pydantic>=2.13.4",
    "tenacity>=9.1.4",
]



[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "mypy>=2.1.0",
    "ruff>=0.15.20",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "pandas>=2.3.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "ANN",    # flake8-annotations
    "D",      # pydocstyle
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["fabric_client"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
disable_error_code = ["valid-type"]
packages = ["fabric_client", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
